[package]
name = "elephant-archive"
version = "0.1.0"
edition = "2021"
authors = ["Patineboot <patine@patineboot.com>"]
description = "Elephant Archive is a great CLI archiver."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
clap = {version="4.0", features = ["derive"]}
