[workspace]
members = [
    "archiver",
    "logger",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Patineboot <patine@patineboot.com>"]
description = "Elephant Archive is a great CLI archiver."

[workspace.dependencies]
once_cell = "1.15.0"
chrono = "0.4"
